updated deployement file

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;  # Accepts any IP/Domain. Change to domain if you have one.
+    server_name 43.204.231.150;
 
     # Frontend (React Static Files)
     location / {
